# skills

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  REFERENCE_TEST_TRACEABILITY.md  prek.toml  pyproject.toml  reference-test-traceability.md  skills-lock.json  zensical.toml
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: docs.yml  test-datapackage.yml  tests.yml
dev/skills/datapackage/: datapackage-dev-guide.md  reference-snippet-manifest.json
dev/tools/: check_datapackage_catalog_urls.py  check_reference_traceability.py
docs/: agent-sandbox.md  datapackage-evals.md  index.md  skill-evals.md
prompts/: compile-ferc-schedule-metadata.md
skills/datapackage/: SKILL.md
skills/datapackage/assets/: datapackage-v1.schema.json  datapackage-v2.schema.json  datapackage.json  ferc1_xbrl_datapackage.json  ferc714_xbrl_datapackage.json
skills/datapackage/evals/: evals.json
skills/datapackage/references/: frictionless-validate.md  metadata-querying.md  storage-backends.md
skills/datapackage/scripts/: generate_examples.py
skills/datapackage/tests/: conftest.py  test_backends.py  test_frictionless.py  test_generate_examples.py  test_metadata_duckdb.py  test_metadata_jq.py  test_table_discovery.py
skills/pudl/: SKILL.md  pudl
skills/pudl-dev/: SKILL.md
skills/pudl-dev/references/: alembic.md  code-quality.instructions.md  code-quality.md  contributor-workflow.md  dbt-data-validation.instructions.md  dbt.md  (+8 more)
(+68 files in other folders)
